Fix width and spacing of CVSS vector dropdown

--- a/src/search_vulns/web_server_files/static/css/daisyui.css
+++ b/src/search_vulns/web_server_files/static/css/daisyui.css
@@ -48,6 +48,7 @@
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -2895,9 +2896,6 @@
   .min-w-40 {
     min-width: calc(var(--spacing) * 40);
   }
-  .min-w-54 {
-    min-width: calc(var(--spacing) * 54);
-  }
   .min-w-full {
     min-width: 100%;
   }
@@ -3852,11 +3850,6 @@
   .sm\:max-w-xl {
     @media (width >= 40rem) {
       max-width: var(--container-xl);
-    }
-  }
-  .sm\:min-w-82 {
-    @media (width >= 40rem) {
-      min-width: calc(var(--spacing) * 82);
     }
   }
   .sm\:flex-1 {
